--- a/app/globals.css
+++ b/app/globals.css
@@ -46,3 +46,18 @@ input {
   border: none;
   outline: none;
 }
+
+.animation {
+  animation: animation infinite 3s;
+  transform: scale(1);
+}
+
+@keyframes animation {
+  from {
+    transform: scale(1.3);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
