--- a/app/globals.css
+++ b/app/globals.css
@@ -61,3 +61,33 @@ input {
     transform: scale(1);
   }
 }
+
+.icon {
+  background: rgb(0, 0, 0, 0.6);
+  color: white;
+  width: 60px;
+  height: 60px;
+  padding: 10px;
+  cursor: pointer;
+  animation: animatsiya infinite 10s;
+  transform: scale(1.1);
+  border-radius: 10%;
+}
+
+@keyframes animatsiya {
+  0% {
+    padding: 15px;
+  }
+  25% {
+    padding: 5px;
+  }
+  50% {
+    padding: 15px;
+  }
+  75% {
+    padding: 5px;
+  }
+  100% {
+    padding: 20px;
+  }
+}
