--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 
 body {
   /* background: #182E44; */
-  background: url("/prokuratura-Daryo-3.jpg");
+  background: url("/5bf9c034c334c159f7a9348faa42893e.jpg");
   width: 100%;
   height: 500vh;
   background-repeat: no-repeat;
